# LS-PY185

./: README.md
expense/: classes.py  expense  schema.sql
my_films/: app.py  pyproject.toml
todos_app_optimized/: app.py  pyproject.toml  schema.sql
todos_app_optimized/templates/: edit_list.html  layout.html  list.html  lists.html  new_list.html
todos_app_optimized/todos/: database_persistence.py  session_persistence.py  utils.py
